# Python-package

./: .coverage  .gitignore  MANIFEST.in  README.md  example.py  guide.md  pyproject.toml  requirements.txt  setup.py
scripts/: smoke_test.py
src/marketdata_providers/: __init__.py  base.py  brain.py
src/marketdata_providers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/marketdata_providers/providers/: __init__.py  alpha_vantage.py  finnhub.py  fmp.py  polygon.py  twelve_data.py  yahoo_finance.py
stonksapi/: __init__.py  client.py  models.py
stonksapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stonksapi/alpha_vantage/: README.md  __init__.py  client.py  models.py
stonksapi/finance_query/: __init__.py  client.py  models.py
stonksapi/finnhub/: client.py  models.py
stonksapi/polygon/: __init__.py  client.py  models.py
stonksapi/yfinance/: README.md  __init__.py  client.py  models.py
test/: run_tests.py  test_alphavantage.py  test_alphavantage_integration.py  test_alphavantage_more_integration.py  test_base_models.py  test_brain.py  test_config.py  test_data_formatter.py  test_finance_query.py  test_finance_query_integration.py  test_finnhub.py  test_finnhub_integration.py  test_integration.py  test_main_client_integration.py  test_polygon.py  test_polygon_integration.py  test_providers.py  test_yfinance.py  test_yfinance_integration.py
