[project]
name = "stonksapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-vantage>=3.0.0",
    "defeatbeta-api>=0.0.18",
    "finnhub-python>=2.4.25",
    "polygon-api-client>=1.15.4",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "yfinance>=0.2.66",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
]
